Update Cookies UI & fix overlapping issue

--- a/src/components/common/cookie/Cookies.module.scss
+++ b/src/components/common/cookie/Cookies.module.scss
@@ -1,38 +1,20 @@
 .cookies {
   display: flex;
   align-items: center;
-  padding: 26px 32px;
+  justify-content: space-between;
   background: $deep-gray;
-  gap: 32px;
-
-  @include mobile {
-    justify-content: center;
-    padding: 16px;
-
-    br {
-      display: none;
-    }
-  }
 
   &-wrapper {
     position: fixed;
     z-index: $cookies-z;
     right: 0;
-    bottom: 0;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
     opacity: 0;
     pointer-events: none;
     transition: all 0.2s ease-in-out;
     visibility: hidden;
-
-    @include desktop {
-      width: fit-content;
-      max-width: 626px;
-    }
-
-    @include mobile {
-      left: 0;
-      width: 100%;
-    }
 
     &.visible {
       opacity: 1;
@@ -43,16 +25,41 @@
 }
 
 .text {
+  @include font(14--11, 20--15, 400);
+
+  padding: 16px 16px 16px 36px;
   color: $white;
 
   @include mobile {
-    @include font-adapt-txt-regular;
+    padding-left: 16px;
   }
 }
 
 .button {
-  all: unset;
-  z-index: 0;
+  border: 2px solid $white;
+  background-color: $white;
+  cursor: pointer;
+  outline: none;
+  text-align: center;
+  transition: all 0.2s ease-in;
 
-  @include button-small;
+  @include desktop {
+    @include font-desktop-txt-bold;
+
+    box-sizing: content-box;
+    padding: 14px 21px;
+    line-height: 21px;
+  }
+
+  @include mobile {
+    display: flex;
+    align-items: center;
+    align-self: stretch;
+    padding: 8px 10px;
+    font-size: 13px;
+  }
+
+  @include hover {
+    border-color: $general-accent;
+  }
 }
